--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,12 @@ dependencies:
   cupertino_icons: ^1.0.6
   image_picker: ^1.1.1
   firebase_core: ^2.31.0
+  firebase_auth: ^4.19.5
+  awesome_dialog: ^3.2.1
+  firebase_storage: ^11.7.5
+  uuid: ^4.4.0
+  cloud_firestore: ^4.17.3
+  google_nav_bar: ^5.0.6
 
 dev_dependencies:
   flutter_test:
