--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   uuid: ^4.4.0
   cloud_firestore: ^4.17.3
   google_nav_bar: ^5.0.6
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
