--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   cloud_firestore: ^4.17.3
   google_nav_bar: ^5.0.6
   google_fonts: ^6.2.1
+  number_editing_controller: ^1.3.1
 
 dev_dependencies:
   flutter_test:
